# mlops-pipeline-recommender

./: .gitignore  Dockerfile  Makefile  README.md  app.py  preprocess_neural_data.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_mlflow_training.py
.github/workflows/: cd.yml  ci.yml  lint.yml
Recommender/: requirements-dev.txt  requirements.txt
Recommender/configs/: model_config.yaml
Recommender/data/processed/: .gitkeep
Recommender/data/raw/: .gitkeep
Recommender/models/: .gitkeep
Recommender/src/: analyze_validation.py  evaluator.py  explore_data.py  predict.py  predict_neural.py  preprocess_data.py  train.py  train_neural.py
Recommender/src/api/: config.py  dependencies.py  main.py
Recommender/src/api/routers/: health.py  models.py  recommendations.py
Recommender/src/core/: exceptions.py  interfaces.py  schemas.py
Recommender/src/models/: als_model.py  neural_model.py  registry.py
tests/: test_api.py  test_recommender.py
